<resources>
    <string name="app_name">TextLand-Android</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Textland</string>
    <string name="name">You wake up in the middle of a sunny day. There\'s a nice breeze being transported by the wind.\n
					You can\'t remember anything. You just woke up here and nothing else.\n
					After some minutes your memory starts to come back. You start to distinguish the details about the environment around you.\n
					Apparently you are located at the center of a mysterious world and your only hope is to get as far as possible.\n
					After some minutes your memory starts to come back and you try to remember your name:</string>
    <string name="cont">Continue</string>
    <string name="error_name">Please enter a valid alphanumeric name.</string>
    <string name="okay">Okay</string>
    <string name="constant_username">USERNAME</string>
    <string name="your_name_is">Your name is %1$s and gender is %2$s; game will continue soon!</string>
    <string name="male_female">Okay, my name is %1$s. I wonder what happened before you wake up here.\n
                    Anyways, you\'re still confused. This might sound ridiculous&#8230; but am i a male or female?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender_select_msg">You have chosen %1$s for your gender. Is this correct?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue Game</string>
    <string name="deets">Stamina: %1$d\nWater: %2$d\n Food: %3$d</string>
    <string name="dynamic_string">%1$s</string>
    <string name="time_played">Time Played: %1$d:%2$d:%3$d</string>
    <string name="select_a_save_file">Select a Save File</string>
    <string name="load">Load</string>
    <string name="error_no_save_file_selected">No save file selected.</string>
    <string name="error_no_gender_selected">Please select a gender.</string>
    <string name="no_save_file">No save file.</string>
    <string name="start_moving">Allright! Who am i? Why am i here, why can\'t i remember anything?
                \nI know inside me that i have to go straight forward. That way, i will be able to get home.
                \nI can move left and right in case i want to further explore this mysterious world.
                \nI prepare my equipment and my items. I\'ll have to start moving soon.</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="forward">Forward</string>
    <string name="days_cnt">Days: %1$d</string>
</resources>
