<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/activity_male_female_tv"
        android:text="@string/male_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />

    <LinearLayout
        android:id="@+id/activity_male_female_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_male_female_tv"
        android:gravity="center_horizontal"
        android:weightSum="2"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <ImageButton
                android:id="@+id/activity_male_female_male_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/male_female_unselected_background"
                android:layout_margin="10dp"
                android:onClick="genderSelect"
                android:src="@drawable/male_400"
                />
            <TextView
                android:id="@+id/activity_male_female_male_tv"
                style="@style/male_female_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <ImageButton
                android:id="@+id/activity_male_female_female_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/male_female_unselected_background"
                android:layout_margin="10dp"
                android:onClick="genderSelect"
                android:src="@drawable/female_400"
                />
            <TextView
                android:id="@+id/activity_male_female_female_tv"
                style="@style/male_female_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/activity_male_female_continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/activity_male_female_ll"
        android:text="@string/cont"
        android:onClick="genderContinue"
        />
</RelativeLayout>